--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "@es-drager/docs",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "root-doc",
+  "version": "2.2.2",
+  "author": "kakajun <253495832@qq.com>",
+  "license": "MIT",
+  "private": false,
   "scripts": {
-    "docs:dev": "vite",
-    "docs:build": "vue-tsc && vite build",
+    "dev": "vite  --host 0.0.0.0",
+    "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "vitepress": "^1.0.0-rc.33"
+  "dependencies": {
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "react-i18next": "^15.0.2"
   }
 }
