--- a/package.json
+++ b/package.json
@@ -1,66 +1,62 @@
 {
-  "name": "@es-drager/root",
-  "version": "1.2.11",
-  "description": "A draggable, resizable, rotatable component based on vue3",
-  "keywords": [
-    "drag",
-    "resize",
-    "rotate",
-    "vue-drager",
-    "vue-drag-resize",
-    "vue-drager",
-    "es-drager"
-  ],
-  "homepage": "https://github.com/vangleer/es-drager",
-  "bugs": {
-    "url": "https://github.com/vangleer/es-drager/issues"
-  },
+  "name": "root",
+  "version": "1.2.4",
+  "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
-  "author": "huangwantong <965002107@qq.com>",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vangleer/es-drager.git"
-  },
+  "private": true,
   "scripts": {
-    "dev": "pnpm build && pnpm --filter ./packages/docs docs:dev",
-    "build": "pnpm --filter ./packages/drager build",
-    "docs:build": "pnpm build && pnpm --filter ./packages/docs docs:build",
-    "release": "pnpm build && node ./scripts/release.js",
-    "prettier": "prettier --write packages/docs/**/*.{vue,ts,tsx,json}"
-  },
-  "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "@es-drager/common": "workspace:*",
-    "@es-drager/editor": "workspace:*",
-    "@floating-ui/dom": "^1.5.1",
-    "ace-builds": "^1.24.0",
-    "color": "^4.2.3",
-    "echarts": "^5.4.2",
-    "element-plus": "^2.3.8",
-    "es-drager": "workspace:*",
-    "highlight.js": "^11.8.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "mitt": "^3.0.1",
-    "pinia": "^2.1.4",
-    "pinia-plugin-persistedstate": "^3.2.0",
-    "vue": "^3.2.47",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.2"
+    "dev": "pnpm build && pnpm --filter ./packages/docs dev",
+    "build": "pnpm --filter ./packages/sketch-ruler build",
+    "build:demo": "pnpm build && pnpm --filter ./packages/docs build",
+    "format": "prettier --write  \"packages/**/src/**/*.{js,ts,json,tsx,less,vue,html,md}\"",
+    "lint": "esprint check --workers=4 --fix",
+    "changelog": "pnpm --filter ./packages/sketch-ruler changelog",
+    "release": "pnpm --filter ./packages/sketch-ruler release"
   },
   "devDependencies": {
-    "@types/color": "^3.0.3",
-    "@types/node": "^18.15.13",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "prettier": "3.0.3",
-    "sass": "^1.62.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0",
-    "vite-plugin-dts": "^2.3.0",
-    "vue-tsc": "^1.2.0",
-    "chalk": "4.1.0",
-    "enquirer": "^2.4.1",
-    "minimist": "^1.2.8",
-    "semver": "^7.5.4"
-  }
+    "react-sketch-ruler": "workspace:*",
+    "less": "^4.2.0",
+    "simple-panzoom": "^1.0.8",
+    "prop-types": "^15.8.1",
+    "gh-pages": "^6.1.1",
+    "esprint": "^3.6.0",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.11.1",
+    "eslint": "^9.11.1",
+    "prettier": "^3.3.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "@release-it/conventional-changelog": "^8.0.2",
+    "conventional-changelog": "^6.0.0",
+    "conventional-changelog-cli": "^5.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8",
+    "release-it": "^17.7.0",
+    "vite-plugin-dts": "4.2.3",
+    "react-moveable": "^0.56.0",
+    "react-router-dom": "^6.26.2",
+    "react-i18next": "^15.0.2",
+    "highlight.js": "^11.10.0",
+    "antd": "^5.21.2",
+    "globals": "^15.9.0",
+    "@ant-design/icons": "^5.5.1",
+    "antd-style": "^3.7.0"
+  },
+  "keywords": [
+    "react",
+    "ruler",
+    "sketch",
+    "sketch-ruler",
+    "react-sketch-ruler",
+    "room",
+    "panzoom"
+  ]
 }
