--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "scripts": {
     "dev": "pnpm build && pnpm --filter ./packages/docs dev",
-    "build": "pnpm --filter ./packages/sketch-ruler build",
+    "build": "pnpm --filter ./packages/drager build",
     "build:demo": "pnpm --filter ./packages/docs build",
     "format": "prettier --write  \"packages/**/src/**/*.{js,ts,json,tsx,less,vue,html,md}\"",
     "lint": "esprint check --workers=4 --fix",
-    "changelog": "pnpm --filter ./packages/sketch-ruler changelog",
-    "release": "pnpm --filter ./packages/sketch-ruler release"
+    "changelog": "pnpm --filter ./packages/drager changelog",
+    "release": "pnpm --filter ./packages/drager release"
   },
   "devDependencies": {
     "react-es-drager": "workspace:*",
@@ -52,8 +52,8 @@
     "react",
     "ruler",
     "sketch",
-    "sketch-ruler",
-    "react-sketch-ruler",
+    "drager",
+    "react-drager",
     "room",
     "panzoom"
   ]
