--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
-    "react-i18next": "^15.0.2",
-    "react-es-drager": "workspace:*"
+    "react-i18next": "^15.0.2"
   }
 }
