--- a/packages/drager/package.json
+++ b/packages/drager/package.json
@@ -21,8 +21,8 @@
   "files": [
     "lib"
   ],
-  "main_": "lib/index.js",
-  "main": "./index.tsx",
+  "main": "lib/index.js",
+  "main1": "./index.tsx",
   "repository": {
     "type": "git",
     "url": "https://github.com/kakajun/react-es-drager.git"
