--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -8,6 +8,7 @@
     "zustand": "5.0.0-rc.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
-    "mitt": "^3.0.1"
+    "mitt": "^3.0.1",
+    "color": "^4.2.3"
   }
 }
