--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.6.2",
+    "echarts": "^5.5.1",
     "vite": "^5.4.8",
     "release-it": "^17.7.0",
     "vite-plugin-dts": "4.2.3",
@@ -51,10 +52,7 @@
   "keywords": [
     "react",
     "ruler",
-    "sketch",
     "drager",
-    "react-drager",
-    "room",
-    "panzoom"
+    "react-drager"
   ]
 }
