--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "pnpm build && pnpm --filter ./packages/docs dev",
+    "dev": "pnpm --filter ./packages/docs dev",
     "build": "pnpm --filter ./packages/drager build",
     "build:demo": "pnpm --filter ./packages/docs build",
     "format": "prettier --write  \"packages/**/src/**/*.{js,ts,json,tsx,less,vue,html,md}\"",
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "react-es-drager": "workspace:*",
+    "@es-drager/editor": "workspace:*",
     "less": "^4.2.0",
     "gh-pages": "^6.1.1",
     "esprint": "^3.6.0",
