--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -9,6 +9,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "mitt": "^3.0.1",
-    "color": "^4.2.3"
+    "color": "^4.2.3",
+    "dayjs": "^1.11.13"
   }
 }
