--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -10,6 +10,7 @@
     "jspdf": "^2.5.1",
     "mitt": "^3.0.1",
     "color": "^4.2.3",
-    "dayjs": "^1.11.13"
+    "dayjs": "^1.11.13",
+    "@types/color": "^3.0.3"
   }
 }
