--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -12,6 +12,6 @@
     "color": "^4.2.3",
     "dayjs": "^1.11.13",
     "@types/color": "^3.0.3",
-    "@floating-ui/react": "^0.26.25"
+    "@floating-ui/react-dom": "^2.1.2"
   }
 }
