--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,8 +2,8 @@ name: gh-pages
 
 on:
   push:
-    # branches: [main]
-    branches: [master]
+    branches: [main]
+    # branches: [master]
   pull_request:
     branches: [main]
 
