--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "pnpm --filter ./packages/drager build",
     "build:demo": "pnpm --filter ./packages/docs build",
     "format": "prettier --write  \"packages/**/src/**/*.{js,ts,json,tsx,less,vue,html,md}\"",
-    "lint": "esprint check --workers=4 --fix",
+    "lint": "esprint check  --fix",
     "changelog": "pnpm --filter ./packages/drager changelog",
     "release": "pnpm build && node ./scripts/release.js"
   },
