--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,6 +13,7 @@
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "react-i18next": "^15.0.2",
-    "ahooks": "^3.8.1"
+    "ahooks": "^3.8.1",
+    "react-contenteditable": "^3.3.7"
   }
 }
