--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "devDependencies": {
     "react-es-drager": "workspace:*",
     "@es-drager/editor": "workspace:*",
-    "less": "^4.2.0",
-    "gh-pages": "^6.1.1",
+    "less": "^4.4.2",
+    "gh-pages": "^6.3.0",
     "esprint": "^3.6.0",
     "@types/node": "^22.7.4",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "@vitejs/plugin-react": "^4.3.2",
@@ -29,29 +29,30 @@
     "@eslint/js": "^9.11.1",
     "eslint": "^9.11.1",
     "prettier": "^3.3.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "@release-it/conventional-changelog": "^8.0.2",
     "conventional-changelog": "^6.0.0",
     "conventional-changelog-cli": "^5.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "^5.6.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "typescript": "^5.9.3",
     "echarts": "^5.5.1",
-    "vite": "^5.4.8",
-    "vite-plugin-dts": "4.2.3",
+    "vite": "^7.2.2",
+    "vite-plugin-dts": "4.5.4",
     "react-moveable": "^0.56.0",
     "react-router-dom": "^6.26.2",
     "react-i18next": "^15.0.2",
     "highlight.js": "^11.10.0",
-    "antd": "^5.21.2",
-    "globals": "^15.9.0",
+    "antd": "^5.28.1",
+    "globals": "^16.5.0",
     "@ant-design/icons": "^5.5.1",
     "antd-style": "^3.7.0",
     "chalk": "4.1.0",
-    "semver": "^7.5.4",
+    "semver": "^7.7.3",
     "enquirer": "^2.4.1",
-    "minimist": "^1.2.8"
+    "minimist": "^1.2.8",
+    "react-sketch-ruler": "^1.2.12"
   },
   "keywords": [
     "react",
