--- a/packages/drager/package.json
+++ b/packages/drager/package.json
@@ -22,6 +22,7 @@
     "lib"
   ],
   "main": "lib/index.js",
+  "main1": "src/drager.tsx",
   "repository": {
     "type": "git",
     "url": "https://github.com/kakajun/react-es-drager.git"
